--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
   </div>
 
   <script>
+    // 👇 Custom shared key (safe because it's not your LALAL key)
+    const CLIENT_KEY = "secretkey8370710"; // Replace with a custom string that matches what's in your backend ENV
+
     async function submitFile() {
       const fileInput = document.getElementById("audioFile");
       const status = document.getElementById("status");
@@ -88,6 +91,9 @@
       try {
         const response = await fetch("https://bloodsucker.onrender.com/split", {
           method: "POST",
+          headers: {
+            "x-api-key": CLIENT_KEY
+          },
           body: formData,
         });
 
@@ -97,8 +103,14 @@
 
           setTimeout(async () => {
             const resultRes = await fetch(
-              `https://bloodsucker.onrender.com/results/${data.job_id}`
+              `https://bloodsucker.onrender.com/results/${data.job_id}`,
+              {
+                headers: {
+                  "x-api-key": CLIENT_KEY
+                }
+              }
             );
+
             const resultData = await resultRes.json();
 
             if (resultData.vocal_link && resultData.instrumental_link) {
@@ -110,7 +122,7 @@
             } else {
               status.textContent = "Something went wrong. Please try again.";
             }
-          }, 2000); // Simulated delay
+          }, 2000);
         } else {
           status.textContent = data.message || "Error in response.";
         }
